dropzone background change

--- a/dropz.css
+++ b/dropz.css
@@ -1,6 +1,6 @@
  
 .dropz {
-    background: white;
+    background: #fafafa;
     border-radius: 5px;
     border: 1px dashed rgb(183, 188, 192);
     border-image: none;
